# sql-optimisation-and-caching-experimentation

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: tests.yml  vulns.yml
db/: indices.sql
db/base_queries/: average_transaction.sql  number_cards.sql  time_to_transaction.sql  total_balances.sql  unused_accounts.sql
db/sample_queries/: number_cards.sql  time_to_transaction.sql  total_loans.sql  unused_accounts.sql
db/schema/: accounts.sql  audit_logs.sql  cards.sql  loans.sql  payments.sql  transactions.sql  transfers.sql  users.sql
db/views/: average_transaction_amount.sql  loans_outstanding.sql  suspicious_transactions.sql
src/: lib.rs
src/caching/: mod.rs
src/enums/: account_type.rs  audit_log_action.rs  audit_log_subject_table.rs  card_status.rs  card_type.rs  loan_status.rs  mod.rs  payment_status.rs  transaction_status.rs  transaction_type.rs  transfer_status.rs
src/models/: account.rs  audit.rs  card.rs  loan.rs  mod.rs  payment.rs  transaction.rs  transfer.rs  user.rs
src/optimisations/: mod.rs
