[package]
name = "sql-optimisation-caching-experimenting"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.0", features = [
    "runtime-async-std",
    "postgres",
    "uuid",
    "chrono",
] }
fake = { version = "3.0.1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4.39"
rand = "0.9.0"
