[package]
name = "sql-optimisation-caching-experimenting"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.0", features = [
    "runtime-async-std",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
] }
fake = { version = "3.0.1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4.39"
rand = "0.9.0"
moka = { version = "0.12.10", features = ["future"] }
tokio = { version = "1.44.0", features = ["full"] }
